header of home page

--- a/MVC/CI-Platform/CI-PlatformWeb/Views/User/ForgotPassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Views/User/ForgotPassword.cshtml
@@ -12,7 +12,7 @@
                 <label for="email" class="font-light">Email Address</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter your email address...">
             </div>
-            <button type="submit" class="btn submit-btn w-100 rounded-pill bg-white">Reset my Password</button>
+            <button type="submit" class="btn button w-100 rounded-pill bg-white">Reset my Password</button>
         </form>
         <a asp-controller="User" asp-action="Login" class="font-light text-14 color-darkgray">Login</a>
         <a href="#" class="font-light color-darkgray privacy-policy text-14">Privacy Policy</a>
