--- a/MVC/CI-Platform/CI-PlatformWeb/Views/User/Login.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Views/User/Login.cshtml
@@ -14,7 +14,7 @@
                 <label for="password" class="font-light">Password</label>
                 <input type="password" class="form-control" id="password" value="1243j;ll">
             </div>
-            <button type="submit" class="btn submit-btn w-100 rounded-pill bg-white">Login</button>
+            <button type="submit" class="btn button w-100 rounded-pill bg-white">Login</button>
         </form>
         <a asp-controller="User" asp-action="ForgotPassword" class="font-light color-darkgray text-14">Lost your password?</a>
         <div class="font-light text-14 color-darkgray">Don't have an account? <a asp-controller="User" asp-action="Registration"
