--- a/MVC/CI-Platform/CI-PlatformWeb/Views/User/Registration.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Views/User/Registration.cshtml
@@ -35,7 +35,7 @@
                 <label for="confirm-password" class="font-light">Confirm Password</label>
                 <input type="password" class="form-control" id="confirm-password" value="1243j;ll">
             </div>
-            <button type="submit" class="btn submit-btn w-100 rounded-pill bg-white">Register</button>
+            <button type="submit" class="btn button w-100 rounded-pill bg-white">Register</button>
         </form>
         <a asp-controller="User" asp-action="ForgotPassword" class="font-light color-darkgray text-14">Lost your password?</a>
         <div class="font-light text-14 color-darkgray">Already Registered? <a asp-controller="User" asp-action="Login"
