--- a/MVC/NTierDemo/NTierDemoWeb/Views/Home/Index.cshtml
+++ b/MVC/NTierDemo/NTierDemoWeb/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h3 class="mt-5">List of Employees</h3>
+<div class="d-flex justify-content-between mt-2">
+    <h3 class="">List of Employees</h3>
+    <a asp-controller="Home" asp-action="CreateEmployee" class="btn btn-primary p-2">Create New Employee</a>
+</div>
 <partial name="_Partial_EmployeeGrid" model="Model" />
 
 <script>
