--- a/MVC/CI-Platform/CI-PlatformWeb/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Views/Home/Index.cshtml
@@ -1,8 +1,113 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<header class="border-bottom border-2">
+    <nav class="navbar container">
+        <div class="d-flex gap-5 align-items-center font-light">
+            <a href="#">
+                <img src="./image/logo.png" alt="logo" class="navbar-brand">
+            </a>
+            <a href="#" class="color-darkgray">Stories</a>
+            <div class="dropdown d-none d-md-block">
+                <button class="btn color-darkgray dropdown-toggle font-light" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Policy
+                    <img src="./image/drop-down.png" alt="drop-down" class="d-inline ms-2">
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <div class="dropdown">
+                <button class="btn dropdown-toggle d-flex align-items-center gap-2 color-darkgray font-light"
+                    type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="./image/user-img.png" alt="profile" class="rounded-circle profile-picture">
+                    <span class="d-none d-md-inline">Evan Donohue</span>
+                    <img src="./image/drop-down.png" alt="drop-down">
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <hr class="m-0 bg-secondary">
+    <section>
+        <div class="container d-flex justify-content-between">
+            <div class="d-flex py-3">
+                <img src="./image/search.png" alt="search" class="h-50 my-auto me-3">
+                <input type="search" id="Search" placeholder="Search missions..." class="form-control">
+            </div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+            <img src="./image/filter.png" alt="filter" class="h-50 my-auto d-lg-none">
+        </div>
+        <div class="d-flex bg-warning filters">
+            <div class="border filter py-3">
+                <div class="dropdown">
+                    <button
+                        class="font-light w-100 d-flex justify-content-between align-items-center btn dropdown-toggle color-darkgray"
+                        type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Country
+                        <img src="./image/drop-down.png" alt="drop-down" class="d-inline">
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="border filter py-3">
+                <div class="dropdown">
+                    <button
+                        class="font-light w-100 d-flex justify-content-between align-items-center btn dropdown-toggle color-darkgray"
+                        type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        City
+                        <img src="./image/drop-down.png" alt="drop-down" class="d-inline">
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="border filter py-3">
+                <div class="dropdown">
+                    <button
+                        class="font-light w-100 d-flex justify-content-between align-items-center btn dropdown-toggle color-darkgray"
+                        type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Theme
+                        <img src="./image/drop-down.png" alt="drop-down" class="d-inline">
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="border filter py-3">
+                <div class="dropdown">
+                    <button
+                        class="font-light w-100 d-flex justify-content-between align-items-center btn dropdown-toggle color-darkgray"
+                        type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Skill
+                        <img src="./image/drop-down.png" alt="drop-down" class="d-inline">
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+</header>
