--- a/MVC/CI-Platform/CI-PlatformWeb/Views/User/ResetPassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Views/User/ResetPassword.cshtml
@@ -16,7 +16,7 @@
                     <label for="confirm-password" class="font-light">Confirm New Password</label>
                     <input type="password" class="form-control" id="confirm-password" value="1234asdf">
                 </div>
-                <button type="submit" class="btn submit-btn w-100 rounded-pill">Change Password</button>
+                <button type="submit" class="btn button w-100 rounded-pill">Change Password</button>
             </form>
             <a asp-controller="User" asp-action="Login" class="font-light text-14 color-darkgray">Login</a>
             <a href="#" class="font-light color-darkgray privacy-policy text-14">Privacy Policy</a>
