--- a/MVC/NTierDemo/NTierDemoWeb/Views/Shared/_Partial_EmployeeGrid.cshtml
+++ b/MVC/NTierDemo/NTierDemoWeb/Views/Shared/_Partial_EmployeeGrid.cshtml
@@ -12,6 +12,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Role)
             </th>
+            <th>
+                Actions
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -26,6 +29,10 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Role)
+                </td>
+                <td>
+                    <a asp-asp-controller="Home" asp-action="EditEmployee" asp-route-id="@item.Id" class="btn btn-warning p-1">Edit</a>
+                    <a asp-asp-controller="Home" asp-action="DeleteEmployee" asp-route-id="@item.Id" class="btn btn-danger p-1">Delete</a>
                 </td>
             </tr>
         }
