mission details page

--- a/MVC/CI-Platform/CI-PlatformWeb/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Views/Home/Index.cshtml
@@ -3,42 +3,43 @@
 }
 <div class="index-body d-grid min-vh-100">
         <header class="border-bottom border-2 bg-white">
-            <nav class="navbar container sticky-top bg-white py-1">
-                <div class="d-flex gap-5 align-items-center fw-light">
-                    <a href="#">
-                        <img src="./image/logo.png" alt="logo" class="navbar-brand">
-                    </a>
-                    <a href="#" class="color-darkgray">Stories</a>
-                    <div class="dropdown d-none d-md-block">
-                        <button class="btn color-darkgray dropdown-toggle fw-light" type="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Policy
-                            <img src="./image/drop-down.png" alt="drop-down" class="d-inline ms-2">
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+            <nav class="navbar sticky-top bg-white py-1 border-2 border-bottom">
+                <div class="container">
+                    <div class="d-flex gap-5 align-items-center fw-light">
+                        <a href="#">
+                            <img src="./image/logo.png" alt="logo" class="navbar-brand">
+                        </a>
+                        <a href="#" class="color-darkgray">Stories</a>
+                        <div class="dropdown d-none d-md-block">
+                            <button class="btn color-darkgray dropdown-toggle fw-light" type="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Policy
+                                <img src="./image/drop-down.png" alt="drop-down" class="d-inline ms-2">
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <div class="dropdown">
-                        <button class="btn dropdown-toggle d-flex align-items-center gap-2 color-darkgray fw-light"
-                            type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="./image/user-img.png" alt="profile" class="rounded-circle profile-picture">
-                            <span class="d-none d-md-inline">Evan Donohue</span>
-                            <img src="./image/drop-down.png" alt="drop-down">
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-md-start">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                    <div>
+                        <div class="dropdown">
+                            <button class="btn dropdown-toggle d-flex align-items-center gap-2 color-darkgray fw-light"
+                                type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="./image/user-img.png" alt="profile" class="rounded-circle profile-picture">
+                                <span class="d-none d-md-inline">Evan Donohue</span>
+                                <img src="./image/drop-down.png" alt="drop-down">
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-md-start">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </nav>
-            <hr class="m-0 bg-secondary">
             <section class="container d-flex flex-column flex-md-row justify-content-md-between">
                 <div class="d-flex justify-content-between index-header-section bg-white py-2">
                     <div class="d-flex">
@@ -200,7 +201,7 @@
                         </div>
                         <div class="card-body color-darkgray">
                             <h4 class="card-title">Grow Trees On the path to environment sustainability</h4>
-                            <p class="card-text fw-light index-mission-desc-ellipsis-2 text-black-50 text-15">Some quick
+                            <p class="card-text fw-light ellipsis-2 text-black-50 text-15">Some quick
                                 example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
@@ -285,7 +286,7 @@
                         </div>
                         <div class="card-body color-darkgray">
                             <h4 class="card-title">Grow Trees On the path to environment sustainability</h4>
-                            <p class="card-text fw-light index-mission-desc-ellipsis-2 text-black-50 text-15">Some quick
+                            <p class="card-text fw-light ellipsis-2 text-black-50 text-15">Some quick
                                 example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
@@ -366,7 +367,7 @@
                         </div>
                         <div class="card-body color-darkgray">
                             <h4 class="card-title">Grow Trees On the path to environment sustainability</h4>
-                            <p class="card-text fw-light text-black-50 text-15 index-mission-desc-ellipsis-7">Some quick example text to
+                            <p class="card-text fw-light text-black-50 text-15 ellipsis-7">Some quick example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
                                 amet Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, pariatur.
@@ -446,7 +447,7 @@
                         </div>
                         <div class="card-body color-darkgray">
                             <h4 class="card-title">Grow Trees On the path to environment sustainability</h4>
-                            <p class="card-text fw-light index-mission-desc-ellipsis-2 text-black-50 text-15">Some quick
+                            <p class="card-text fw-light ellipsis-2 text-black-50 text-15">Some quick
                                 example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
@@ -527,7 +528,7 @@
                         </div>
                         <div class="card-body color-darkgray">
                             <h4 class="card-title">Grow Trees On the path to environment sustainability</h4>
-                            <p class="card-text fw-light index-mission-desc-ellipsis-2 text-black-50 text-15">Some quick
+                            <p class="card-text fw-light ellipsis-2 text-black-50 text-15">Some quick
                                 example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
@@ -608,7 +609,7 @@
                         </div>
                         <div class="card-body color-darkgray">
                             <h4 class="card-title">Grow Trees On the path to environment sustainability</h4>
-                            <p class="card-text fw-light text-black-50 text-15 index-mission-desc-ellipsis-7">Some quick example text to
+                            <p class="card-text fw-light text-black-50 text-15 ellipsis-7">Some quick example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
                                 amet
@@ -688,7 +689,7 @@
                         </div>
                         <div class="card-body color-darkgray">
                             <h4 class="card-title">Grow Trees On the path to environment sustainability</h4>
-                            <p class="card-text fw-light index-mission-desc-ellipsis-2 text-black-50 text-15">Some quick
+                            <p class="card-text fw-light ellipsis-2 text-black-50 text-15">Some quick
                                 example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
@@ -769,7 +770,7 @@
                         </div>
                         <div class="card-body color-darkgray">
                             <h4 class="card-title">Grow Trees On the path to environment sustainability</h4>
-                            <p class="card-text fw-light index-mission-desc-ellipsis-2 text-black-50 text-15">Some quick
+                            <p class="card-text fw-light ellipsis-2 text-black-50 text-15">Some quick
                                 example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
@@ -850,7 +851,7 @@
                         </div>
                         <div class="card-body color-darkgray">
                             <h4 class="card-title">Grow Trees On the path to environment sustainability</h4>
-                            <p class="card-text fw-light text-black-50 text-15 index-mission-desc-ellipsis-7">Some quick example text to
+                            <p class="card-text fw-light text-black-50 text-15 ellipsis-7">Some quick example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
                                 amet
@@ -1152,7 +1153,7 @@
                             </div>
                             <h4 class="card-title mt-1 mt-lg-2 mb-0 mb-lg-1">Grow Trees On the path to environment
                                 sustainability</h4>
-                            <p class="card-text fw-light text-black-50 text-15 index-mission-desc-ellipsis-2">Some quick example text to
+                            <p class="card-text fw-light text-black-50 text-15 ellipsis-2">Some quick example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
                                 amet
@@ -1446,7 +1447,7 @@
                             </div>
                             <h4 class="card-title mt-1 mt-lg-2 mb-0 mb-lg-1">Grow Trees On the path to environment
                                 sustainability</h4>
-                            <p class="card-text fw-light text-black-50 text-15 index-mission-desc-ellipsis-2">Some quick example text to
+                            <p class="card-text fw-light text-black-50 text-15 ellipsis-2">Some quick example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
                                 amet
@@ -1740,7 +1741,7 @@
                             </div>
                             <h4 class="card-title mt-1 mt-lg-2 mb-0 mb-lg-1">Grow Trees On the path to environment
                                 sustainability</h4>
-                            <p class="card-text fw-light text-black-50 text-15 index-mission-desc-ellipsis-2">Some quick example text to
+                            <p class="card-text fw-light text-black-50 text-15 ellipsis-2">Some quick example text to
                                 build on the card title and make up the bulk of the card's content. Lorem ipsum dolor
                                 sit
                                 amet
@@ -1792,7 +1793,7 @@
                     </div>
                 </div>
             </section>
-            <div class="page-btn-container d-flex justify-content-center gap-2 mt-5"> 
+            <div class="page-btn-container d-flex justify-content-center gap-1 mt-5"> 
                 <button class="btn rounded border border-2"><img src="./image/previous.png" alt="previous"></button>
                 <button class="btn rounded border border-2"><img src="./image/left.png" alt="left"></button>
                 <button class="page-btn btn rounded border border-2 shadow-sm color-darkgray fw-light active-page-btn">1</button>
