story listing page

--- a/HTML/PSD to HTML/css/style.css
+++ b/HTML/PSD to HTML/css/style.css
@@ -15,7 +15,6 @@ img {
   display: block;
   max-width: 100%;
 }
-
 a {
   text-decoration: none;
 }
@@ -60,7 +59,7 @@ a:hover {
 .width-max-conatent {
   width: max-content;
 }
-
+.border-dashed{border-style: dashed !important;}
 form input {
   color: var(--dark-gray) !important;
 }
@@ -110,7 +109,8 @@ form input:focus {
 }
 
 .button:hover {
-  color: var(--blue);
+  color: var(--light-orange);
+  background-color: rgb(240, 240, 240);
   transition: var(--transition);
 }
 
@@ -174,11 +174,6 @@ form input:focus {
 
 .dropdown-toggle::after {
   display: none;
-}
-
-.profile-picture {
-  width: 40px;
-  height: 40px;
 }
 
 .index-header-section {
